@@ -2,6 +2,7 @@ openmediavault (5.5.12-1) stable; urgency=low
 
   * Issue #816: If you have assigned a comment to a user, you
     can't delete the comment.
+  * Issue #819: Dashboard on mobile not adjusting to 100% screen size.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 22 Sep 2020 02:38:41 +0200
 
